force-app/main/default/objects/AR_User_Storys__c/AR_User_Storys__c.object-meta.xml
<CustomObject>
    <description>AR User Story</description>
    <label>AR User Story</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AR User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR User Story</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>