force-app/main/default/objects/AR_User_Storys__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <description>AR User Story</description>
    <displayFormat>a-{000}</displayFormat>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>A</label>
    <type>AutoNumber</type>
</CustomField>