force-app/main/default/objects/AR_User_Storys__c/fields/Acc_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Acc_Billing_Address__c</fullName>
    <description>AR User Story</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Acc_Billing_Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>