force-app/main/default/objects/AR_User_Storys__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>AR User Story</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>