force-app/main/default/objects/AR_User_Storys__c/fields/AR_User_Storys__c.field-meta.xml
<CustomField>
    <fullName>AR_User_Storys__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>AR User Story</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <infoMessage>AR User Story</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>AR User Story</relationshipLabel>
    <relationshipName>AR_User_Story</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>