force-app/main/default/objects/AR_User_Storys__c/fields/Authorization_Form__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Form__c</fullName>
    <description>AR User Story</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Authorization Form</label>
    <referenceTo>AuthorizationForm</referenceTo>
    <relationshipLabel>AR User Story</relationshipLabel>
    <relationshipName>AR_User_Story</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>