force-app/main/default/objects/AR_User_Storys__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <description>AR User Story</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>B</label>
    <type>Date</type>
</CustomField>