force-app/main/default/objects/AR_User_Storys__c/fields/Billing_Addres__c.field-meta.xml
<CustomField>
    <fullName>Billing_Addres__c</fullName>
    <description>AR User Story</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Billing Addres</label>
    <required>true</required>
    <type>Time</type>
</CustomField>