force-app/main/default/objects/AR_User_Storys__c/fields/Categorys__c.field-meta.xml
<CustomField>
    <fullName>Categorys__c</fullName>
    <description>AR User Story</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Categorys</label>
    <length>50</length>
    <referenceTo>Categorys__x</referenceTo>
    <relationshipLabel>AR User Story</relationshipLabel>
    <relationshipName>AR_User_Story</relationshipName>
    <type>ExternalLookup</type>
</CustomField>