force-app/main/default/objects/AR_User_Storys__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>100</defaultValue>
    <description>AR User Story</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Currency</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>