force-app/main/default/objects/AR_User_Storys__c/fields/Date_time__c.field-meta.xml
<CustomField>
    <fullName>Date_time__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <description>AR User Story</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Date  time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>