force-app/main/default/objects/AR_User_Storys__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <description>AR User Story</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Geo</label>
    <required>true</required>
    <scale>2</scale>
    <type>Location</type>
</CustomField>