force-app/main/default/objects/AR_User_Storys__c/fields/isChecked__c.field-meta.xml
<CustomField>
    <fullName>isChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AR User Story</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>isChecked</label>
    <type>Checkbox</type>
</CustomField>