force-app/main/default/objects/AR_User_Storys__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>AR User Story</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>