force-app/main/default/objects/AR_User_Storys__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <defaultValue>$Label.kcs_dev__aaaabcd</defaultValue>
    <description>AR User Story</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>