force-app/main/default/objects/AR_User_Storys__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>AR User Story</description>
    <externalId>true</externalId>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>