force-app/main/default/objects/AR_User_Storys__c/fields/Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email__c</fullName>
    <description>AR User Story</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>Personal Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>