force-app/main/default/objects/AR_User_Storys__c/validationRules/Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Empty</fullName>
    <active>true</active>
    <description>AR User Story</description>
    <errorConditionFormula>Acc_Billing_Address__c &lt;&gt; NULL</errorConditionFormula>
    <errorMessage>AR User Story</errorMessage>
</ValidationRule>